--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,34 @@
  *= require_tree .
  *= require_self
  */
+
+
+/*
+ *= require bootstrap_and_overrides
+ */
+
+footer {
+    height: 50px;
+    margin-left: 120px;
+}
+
+input, textarea {
+    width: 500px;
+}
+
+.span9 {
+    width:80%;
+    word-wrap: break-word;
+}
+
+@media (max-width: 768px) { /* use the max to specify at each container level */
+    .specifictd {
+        width:360px;  /* adjust to desired wrapping */
+        display:table;
+        white-space: pre-wrap; /* css-3 */
+        white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+        white-space: -pre-wrap; /* Opera 4-6 */
+        white-space: -o-pre-wrap; /* Opera 7 */
+        word-wrap: break-word; /* Internet Explorer 5.5+ */
+    }
+}
