--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><%= content_for?(:title) ? yield(:title) : "UWA Research Crowd: Project Management" %></title>
+  <title><%= content_for?(:title) ? yield(:title) : "Student Beacon" %></title>
   <%= csrf_meta_tags %>
 
   <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
@@ -50,11 +50,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <a class="brand" href="#">UWA Research Crowd</a>
+      <a class="brand" href="#">Student Beacon</a>
       <div class="container nav-collapse">
         <ul class="nav">
-          <li><%= link_to "New Project", new_project_path  %></li>
-          <li><%= link_to "User Roles", user_roles_path  %></li>
+          <li><%= link_to "New Event", new_activity_path  %></li>
+          <li><%= link_to "Activity", new_activity_path  %></li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
